# boilerplate-fastapi-auth

./: main.py  pyproject.toml  test.db
auth/: database.py  dependencies.py  models.py  routes.py  schema.py  utils.py
db/: connection.py  models.py
service/: routes.py
tests/: test_auth.py
