[tool.poetry]
name = "boilerplate-fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Julio Rafael <juliorafaelnft@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.112.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
async = "^0.6.2"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
